--- a/resources/language/resource.language.cs_cz/strings.po
+++ b/resources/language/resource.language.cs_cz/strings.po
@@ -9,57 +9,57 @@ msgstr ""
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Kodi Translation Team\n"
-"Language-Team: English (United Kingdom) (http://www.transifex.com/projects/p/kodi-main/language/en_GB/)\n"
+"Language-Team: Czech (Czech Republic) (http://www.transifex.com/projects/p/kodi-main/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: en_GB\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: cs_CZ\n"
+"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
 # Addon settings (30000+)
 
 msgctxt "#30000"
 msgid "GENERAL"
-msgstr ""
+msgstr "OBECNÉ"
 
 msgctxt "#30001"
 msgid "Hue Bridge IP address"
-msgstr ""
+msgstr "Hue Bridge IP adresa"
 
 # Common (30020+)
 
 msgctxt "#30020"
 msgid "Authorize add-on:"
-msgstr ""
+msgstr "Autorizujte doplňek:"
 
 msgctxt "#30021"
 msgid "Press the button on Hue Bridge and then press OK."
-msgstr ""
+msgstr "Stiskněte tlačítko Hue Bridge a poté stiskněte OK."
 
 msgctxt "#30022"
 msgid "Authorization error!"
-msgstr ""
+msgstr "Chyba autorizace!"
 
 msgctxt "#30023"
 msgid "Addon routing error!"
-msgstr ""
+msgstr "Chyba routingu!"
 
 # Main menu (30030+)
 
 msgctxt "#30030"
 msgid "LIGHTS"
-msgstr ""
+msgstr "SVĚTLA"
 
 msgctxt "#30031"
 msgid "ROOMS"
-msgstr ""
+msgstr "MÍSTNOSTI"
 
 # Lights (30040+)
 
 msgctxt "#30040"
 msgid "Switch the light ON"
-msgstr ""
+msgstr "Zapnout světlo"
 
 msgctxt "#30041"
 msgid "Switch the light OFF"
-msgstr ""
+msgstr "Vypnout světlo"
